--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The IIITB Student Kit</h2>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">This is an informal guide by the students of IIIT-B</p>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Here, you can find everything you need to know to before becoming a student of IIIT-B</p>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#" class="btn btn-success btn-lg">Click on tile below to download</a></p>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Click on tile below to download</a></p>
 					</div>
 				</div>
 			</div>
@@ -238,7 +238,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="/files/FAQ.pdf">
+						<a href="files/FAQ.pdf">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -255,6 +255,24 @@
 				</ul>
 			</div>
 		</div>
+
+		<div class="container">
+			<div class="fh5co-text">
+				<div class="fh5co-text-inner">
+					<div class="row p-b">
+						<div class="col-md-6 col-md-offset-3 text-center">
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni academic experience</a></p>
+						</div>
+						<div class="text-center wow fadeInUp">
+							<iframe width="420" height="315" src="http://www.youtube.com/embed/oh2C3Mos5bw?autoplay=0"></iframe>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
 
 		<!-- <div class="fh5co-blog-style-1">
 			<div class="container">
