--- a/index.html
+++ b/index.html
@@ -255,7 +255,23 @@
 				</ul>
 			</div>
 		</div>
-
+		
+		<div class="container">
+			<div class="fh5co-text">
+				<div class="fh5co-text-inner">
+					<div class="row p-b">
+						<div class="col-md-6 col-md-offset-3 text-center">
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni academic experience</a></p>
+						</div>
+						<div class="text-center wow fadeInUp">
+							<iframe width="420" height="315" src="http://www.youtube.com/embed/oh2C3Mos5bw?autoplay=0"></iframe>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		<!-- <div class="fh5co-blog-style-1">
 			<div class="container">
 				<div class="row p-b">
