Removed unnecessary href from button

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">The IIITB Student Kit</h2>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">This is an informal guide by the students of IIIT-B</p>
 						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Here, you can find everything you need to know to before becoming a student of IIIT-B</p>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#" class="btn btn-success btn-lg">Click on tile to download</a></p>
+						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Click on tile to download</a></p>
 					</div>
 				</div>
 			</div>
