--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni academic experience</a></p>
 						</div>
 						<div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
-							<iframe width="420" height="315" src="http://www.youtube.com/embed/oh2C3Mos5bw?autoplay=0 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+							<iframe width="75%" height="315" src="http://www.youtube.com/embed/oh2C3Mos5bw?autoplay=0 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 						</div>
 					</div>
 				</div>
