--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 	<!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Monsterrat:400,700|Merriweather:400,300italic,700' rel='stylesheet' type='text/css'>
 
+	<!-- Font-Awesome -->
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/font-awesome-custom.css">
+
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -130,6 +135,16 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="container follow-us-container">
+    		<div class="wow fadeInUp text-center" data-wow-duration="1s" data-wow-delay="1.5s">
+        	<a class="fa fa-facebook social-icon" href="https://www.facebook.com/IIIT-Bangalore-152653471481338/" target="_blank"></a>
+					<a class="fa fa-google-plus social-icon" href="https://plus.google.com/+iiitbmedia/posts" target="_blank"></a>
+					<a class="fa fa-linkedin social-icon" href="https://www.linkedin.com/company/iiit-bangalore" target="_blank"></a>
+        	<a class="fa fa fa-youtube-play social-icon" href="https://www.youtube.com/user/iiitbmedia" target="_blank"></a>
+    		</div>
+			</div>
+
 			<div class="fh5co-projects">
 				<ul>
 					<li class="wow fadeInUp" style="background-image: url(images/full_4.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
@@ -147,7 +162,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s" data-wow-delay="1.7s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s" data-wow-delay="1.6s" data-stellar-background-ratio="0.5">
 						<a href="#">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -162,7 +177,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" style="background-image: url(images/full_3.jpg);" data-wow-duration="1s" data-wow-delay="2s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp" style="background-image: url(images/full_3.jpg);" data-wow-duration="1s" data-wow-delay="1.8s" data-stellar-background-ratio="0.5">
 						<a href="#">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -193,14 +208,14 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s" data-wow-delay="0.7s" data-stellar-background-ratio="0.5">
-						<a href="#">
+						<a href="https://www.youtube.com/watch?v=1A94Q7B7nT4&index=6&list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Experiences</h3></div>
-											<div class="col-md-6"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
+											<div class="col-md-6"><p>Explore the campus experiences of some of your seniors</p></div>
 										</div>
 									</div>
 								</div>
@@ -255,7 +270,7 @@
 				</ul>
 			</div>
 		</div>
-		
+
 		<div class="container">
 			<div class="fh5co-text">
 				<div class="fh5co-text-inner">
@@ -265,13 +280,13 @@
 							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni academic experience</a></p>
 						</div>
 						<div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
-							<iframe width="75%" height="500" src="https://www.youtube.com/embed/oh2C3Mos5bw?autoplay=0 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+							<iframe width="75%" height="500" src="https://www.youtube.com/embed/videoseries?list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W" autoplay=0 html5=1 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		
+
 		<!-- <div class="fh5co-blog-style-1">
 			<div class="container">
 				<div class="row p-b">
