Added quora tab

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/font-awesome-custom.css">
 
-
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -261,6 +260,21 @@
 										<div class="row">
 											<div class="col-md-6"><h3>FAQ's</h3></div>
 											<div class="col-md-6"><p>Check out the Frequently Asked Questions on the IIITB iMtech Admission Forum.</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li class="wow fadeInUp" style="background-image: url(images/full_1.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+						<a href="/IIITB-StudentKit/files/FAQ.pdf">
+							<div class="fh5co-overlay"></div>
+							<div class="container">
+								<div class="fh5co-text">
+									<div class="fh5co-text-inner">
+										<div class="row">
+											<div class="col-md-6"><h3>Quora Q&A's</h3></div>
+											<div class="col-md-6"><p>Around 700 questions were asked by aspiring students and were answered by the students of IIITB over the years,... Don't forget to go through them ;)</p></div>
 										</div>
 									</div>
 								</div>
