Increased social icon sizes,... replaced inner text placeholders

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Reaching IIITB</h3></div>
-											<div class="col-md-6"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
+											<div class="col-md-6"><p>Not sure how to get here ? Click here to know more,...</p></div>
 										</div>
 									</div>
 								</div>
@@ -169,7 +169,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Required Documents</h3></div>
-											<div class="col-md-6"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
+											<div class="col-md-6"><p>Here's a checklist of all the documents you need !</p></div>
 										</div>
 									</div>
 								</div>
@@ -184,7 +184,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Hotels Nearby</h3></div>
-											<div class="col-md-6"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
+											<div class="col-md-6"><p>First time here,... Want a place to relax ?</p></div>
 										</div>
 									</div>
 								</div>
@@ -199,7 +199,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Places to visit</h3></div>
-											<div class="col-md-6"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
+											<div class="col-md-6"><p>Bored !?! It's time to explore ;)</p></div>
 										</div>
 									</div>
 								</div>
@@ -229,22 +229,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Induction day schedule</h3></div>
-											<div class="col-md-6"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</a>
-					</li>
-					<li class="wow fadeInUp" style="background-image: url(images/full_4.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="#">
-							<div class="fh5co-overlay"></div>
-							<div class="container">
-								<div class="fh5co-text">
-									<div class="fh5co-text-inner">
-										<div class="row">
-											<div class="col-md-6"><h3>Informal Brochure</h3></div>
-											<div class="col-md-6"><p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p></div>
+											<div class="col-md-6"><p>Your schedule for the first day @IIITB</p></div>
 										</div>
 									</div>
 								</div>
