--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Experiences</h3></div>
-											<div class="col-md-6"><p>Explore the campus experiences of some of your seniors</p></div>
+											<div class="col-md-6"><p>Here's what IIITB's alumni have got to say !</p></div>
 										</div>
 									</div>
 								</div>
