Commented out testimonial section

--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 			</div>
 		</div> -->
 
-		<div class="fh5co-testimonial-style-2">
+		<!-- <div class="fh5co-testimonial-style-2">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
@@ -608,8 +608,8 @@
 							<div class="fh5co-name">
 								<img src="images/person_5.jpg" alt="">
 								<div class="fh5co-meta">
-									<h3>Chris Clark</h3>
-									<span class="fh5co-company">XYZ Inc.</span>
+									<h3>Bharadwaj Ramkumar</h3>
+									<span class="fh5co-company">Mtech 2013-2015</span>
 								</div>
 							</div>
 							<div class="fh5co-text">
@@ -702,7 +702,7 @@
 
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- <div class="fh5co-footer-style-3">
 			<div class="container">
