--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
 							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></h2>
 							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni academic experience</a></p>
 						</div>
+						
+						<!-- Video Frame -->
 						<div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 							<iframe width="75%" height="500" src="https://www.youtube.com/embed/videoseries?list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W" autoplay=0 html5=1 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 						</div>
