--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 						
 						<!-- Video Frame -->
 						<div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
-							<iframe width="75%" height="500" src="https://www.youtube.com/embed/videoseries?list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W" autoplay=0 html5=1 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+							<iframe width="75%" height="500" src="https://www.youtube.com/embed/oh2C3Mos5bw" autoplay=0 html5=1 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 						</div>
 					</div>
 				</div>
