--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="/IIITB-StudentKit/files/FAQ.pdf">
+						<a href="https://www.quora.com/topic/International-Institute-of-Information-Technology-Bangalore-IIIT-B">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
