--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
+
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
+
 	<!-- Magnific Popup-->
 	<link rel="stylesheet" href="css/magnific-popup.css">
+
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 
@@ -51,6 +55,9 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
+
+	<!-- Ubuntu Font -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -215,7 +222,7 @@
 							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></h2>
 							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni academic experience</a></p>
 						</div>
-						
+
 						<!-- Video Frame -->
 						<div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 							<iframe width="75%" height="500" src="https://www.youtube.com/embed/oh2C3Mos5bw" autoplay=0 html5=1 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
