--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
 	<!-- Ubuntu Font -->
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
