--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+	<!DOCTYPE html>
+	<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+	<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+	<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+	<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Student Kit | IIITB</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
+	<meta name="description" content="" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="author" content="Zense|IIITB" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -114,7 +114,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp" style="background-image: url(images/full_4.jpg);" data-wow-duration="1s" data-wow-delay="1.8s" data-stellar-background-ratio="0.5">
-						<a href="#">
+						<a href="/IIITB-StudentKit/files/Hotels-near-IIITB.pdf">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -215,7 +215,7 @@
 							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></h2>
 							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Alumni academic experience</a></p>
 						</div>
-						
+
 						<!-- Video Frame -->
 						<div class="text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s">
 							<iframe width="75%" height="500" src="https://www.youtube.com/embed/videoseries?list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W" autoplay=0 html5=1 frameborder="0" allowfullscreen="allowfullscreen"></iframe>
