Added keywords and description

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Student Kit | IIITB</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="description" content="Everything a IIIT-B aspirant needs !" />
+	<meta name="keywords" content="IIIT B, Student Kit, Admission" />
 	<meta name="author" content="Zense|IIITB" />
 
 	<!-- Facebook and Twitter integration -->
