--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
+	<!-- Showdown markdown -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.1/showdown.min.js"></script>
+
 	<!-- Ubuntu Font -->
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
 	<!-- FOR IE9 below -->
@@ -93,7 +96,7 @@
 
 			<div class="fh5co-projects">
 				<ul>
-					<li class="wow fadeInUp" style="" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back1" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
 						<a href="#">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -108,7 +111,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.6s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back2" data-wow-duration="1s" data-wow-delay="1.6s" data-stellar-background-ratio="0.5">
 						<a href="#">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -123,7 +126,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back1" data-wow-duration="1s" data-wow-delay="1.8s" data-stellar-background-ratio="0.5">
 						<a href="#">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -138,7 +141,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back2" data-wow-duration="1s" data-wow-delay="0.4s" data-stellar-background-ratio="0.5">
 						<a href="#">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -153,7 +156,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.7s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back1" data-wow-duration="1s" data-wow-delay="0.7s" data-stellar-background-ratio="0.5">
 						<a href="https://www.youtube.com/watch?v=1A94Q7B7nT4&index=6&list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -168,8 +171,8 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" data-stellar-background-ratio="0.5">
-						<a href="#">
+					<li class="wow fadeInUp back2" data-wow-duration="1s" data-wow-delay="1s" data-stellar-background-ratio="0.5">
+						<a class="open-overlay" data-tag="induction" href="javascript:void(0)">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -183,8 +186,8 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a class="open-overlay">
+					<li class="wow fadeInUp back1" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+						<a class="open-overlay" data-tag="faq" href="javascript:void(0)">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -198,7 +201,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back2" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
 						<a href="https://www.quora.com/topic/International-Institute-of-Information-Technology-Bangalore-IIIT-B">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -236,53 +239,22 @@
 		</div>
 
 	<!-- END page-->
-	<section class="overlay" aria-hidden="true">
-  <div>
-    <h2>Hello, I'm the overlayer</h2>
-
-    <p>The internal div has the following style applied just to mimic a lot of content</p>
-
-    <pre><code>
-    .overlay div {
-       margin: 15vh auto;
-       width: 80%;
-       max-width: 650px;
-       padding: 30px;
-       min-height: 200vh;
-       background: rgba(255,255,255, .95);
-    }
-    </code></pre>
-
-
-    <p>The <code>.overlay</code> has a background applied</p>
-
-<pre><code>
-    .overlay div {
-       background:  rgba(40,40,40, .75);
-    }
-  </code></pre>
-
-
-
-    <a class="close-overlay">CLOSE LAYER</button>
-  </div>
-</section>
 	</div>
 
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 
 	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
+	<!-- <script src="js/jquery.easing.1.3.js"></script> -->
 
 	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
+	<!-- <script src="js/bootstrap.min.js"></script> -->
 
 	<!-- Waypoints -->
    <script src="js/jquery.waypoints.min.js"></script>
 
 	<!-- Owl Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
+	<!-- <script src="js/owl.carousel.min.js"></script> -->
 
 	<!-- Magnific Popup -->
 	<script src="js/jquery.magnific-popup.min.js"></script>
@@ -291,38 +263,65 @@
 	<script src="js/jquery.stellar.min.js"></script>
 
 	<!-- countTo -->
-	<script src="js/jquery.countTo.js"></script>
+	<!-- <script src="js/jquery.countTo.js"></script> -->
 
 	<!-- WOW -->
 	<script src="js/wow.min.js"></script>
 
 	<script>
 		new WOW().init();
-		var body = document.body,
-				overlay = document.querySelector('.overlay'),
-				overlayBtts = document.querySelectorAll('a[class$="overlay"]');
+		var converter =  new showdown.Converter();
+		function mdload(link, element){
+			$.get(link).done(function(data) {
+				$(element).append(converter.makeHtml(data));
+			});
+		};
+		function readFiles(tag,Title = "none",filename = "none") {
+			String.prototype.capitalize = function(lower) {
+    		return (lower ? this.toLowerCase() : this).replace(/(?:^|\s)\S/g, function(a) { return a.toUpperCase(); });
+			};
 
-		[].forEach.call(overlayBtts, function(btt) {
+			if(filename==="none"){
+				filename = 'docs/'+tag+".md	";
+			}
+			if(Title === "none"){
+				Title = tag.capitalize();
+			}
+			var newDiv= $('<div/>', { id: tag});
+			var section = $('<section/>',{ class: "overlay"});
+			newDiv.append('<h1>'+Title+"</h1>");
+			mdload(filename,newDiv);
+			section.attr('aria-hidden', true);
+			section.append('<a class="close-overlay" data-tag='+tag+' href="javascript:void(0)">&times</a>');
+			section.append(newDiv);
+			$('body').append(section);
+			var body = document.body,
+					overlayBtts = document.querySelectorAll('a[data-tag="'+tag+'"]');
 
-			btt.addEventListener('click', function() {
+			[].forEach.call(overlayBtts, function(btt) {
 
-				 /* Detect the button class name */
-				 var overlayOpen = this.className === 'open-overlay';
+				btt.addEventListener('click', function() {
+					var overlay = section;//document.querySelectorAll('#'+btt.dataset.tag).parentNode;
+					console.log(overlay);
+					 /* Detect the button class name */
+					 var overlayOpen = this.className === 'open-overlay';
 
-				 /* Toggle the aria-hidden state on the overlay and the
-						no-scroll class on the body */
-				 overlay.setAttribute('aria-hidden', !overlayOpen);
-				 body.classList.toggle('noscroll', overlayOpen);
+					 /* Toggle the aria-hidden state on the overlay and the
+							no-scroll class on the body */
+					 overlay.attr('aria-hidden', !overlayOpen);
+					 body.classList.toggle('noscroll', overlayOpen);
 
-				 /* On some mobile browser when the overlay was previously
-						opened and scrolled, if you open it again it doesn't
-						reset its scrollTop property */
-				 overlay.scrollTop = 0;
+					 /* On some mobile browser when the overlay was previously
+							opened and scrolled, if you open it again it doesn't
+							reset its scrollTop property */
+					 overlay.scrollTop = 0;
 
-			}, false);
+				}, false);
 
-		});
-
+			});
+		}
+		readFiles('faq');
+		readFiles('loda',"Maki","docs/faq.md");
 	</script>
 
 	<!-- Main -->
