--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="1s" data-wow-delay="1.8s" data-stellar-background-ratio="0.5">
-						<a href="/IIITB-StudentKit/files/Hotels-near-IIITB.pdf">
+						<a href="/IIITB-StudentKit/files/Hotels-near-IIITB.pdf" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -157,7 +157,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back1" data-wow-duration="1s" data-wow-delay="0.7s" data-stellar-background-ratio="0.5">
-						<a href="https://www.youtube.com/watch?v=1A94Q7B7nT4&index=6&list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W">
+						<a href="https://www.youtube.com/watch?v=1A94Q7B7nT4&index=6&list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -202,7 +202,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back2" data-wow-duration="1s" data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="https://www.quora.com/topic/International-Institute-of-Information-Technology-Bangalore-IIIT-B">
+						<a href="https://www.quora.com/topic/International-Institute-of-Information-Technology-Bangalore-IIIT-B" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
