--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<div class="fh5co-projects">
 				<ul>
 					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
-						<a href="#">
+						<a href="#howtoreach">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -302,6 +302,7 @@
 		readFiles('faq', 'FAQ');
 		readFiles('induction','Induction Schedule');
 		readFiles('required', 'Required Items');
+		readFiles('howtoreach', 'How to Reach IIIT-B');
 
 		$(function () {
 		    var rx = /INPUT|TEXTAREA/i;
