--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 						</a>
 					</li>
 					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
-						<a href="#">
+						<a href="#placestovisit">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
 								<div class="fh5co-text">
@@ -304,6 +304,7 @@
 		readFiles('induction','Induction Schedule');
 		readFiles('required', 'Required Items');
 		readFiles('howtoreach', 'How to Reach IIIT-B');
+		readFiles('placestovisit', 'Places to Visit in & around Bangalore');
 
 		$(function () {
 		    var rx = /INPUT|TEXTAREA/i;
