--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
 
-	<link rel="stylesheet" href="http://archive.nicinabox.com/superslides/dist/stylesheets/superslides.css">
+	<link rel="stylesheet" href="css/superslides.css">
 
 	<!-- Magnific Popup-->
 	<link rel="stylesheet" href="css/magnific-popup.css">
@@ -73,32 +73,53 @@
 
 	</head>
 	<body>
-
-	<div id="fh5co-page">
-		<div class="fh5co-project-style-2">
-			<div class="container">
+		<div id="slides">
+		  <ul class="slides-container">
+		    <li><img src="images/slider/1.jpg" alt=""></li>
+		    <li><img src="images/slider/2.jpg" alt=""></li>
+		    <li><img src="images/slider/3.jpg" alt=""></li>
+		    <li><img src="images/slider/4.jpg" alt=""></li>
+				<li><img src="images/slider/5.jpg" alt=""></li>
+				<li><img src="images/slider/6.jpg" alt=""></li>
+				<li><img src="images/slider/7.jpg" alt=""></li>
+				<li><img src="images/slider/8.jpg" alt=""></li>
+				<li><img src="images/slider/9.jpg" alt=""></li>
+				<li><img src="images/slider/10.jpg" alt=""></li>
+				<li><img src="images/slider/11.jpg" alt=""></li>
+				<li><img src="images/slider/12.jpg" alt=""></li>
+		  </ul>
+			<nav class="slides-navigation">
+      <a href="#" class="next">
+        <i class="icon-chevron-right"></i>
+      </a>
+      <a href="#" class="prev">
+        <i class="icon-chevron-left"></i>
+      </a>
+    </nav>
+			<div class="cover">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".5s">The IIITB Student Kit</h2>
+						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".5s">The IIIT-B Student Kit</h2>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">This is an informal guide by the students of IIIT-B</p>
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay=".8s">Here, you can find everything you need to know to before becoming a student of IIIT-B</p>
-						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg">Click on tile to download</a></p>
+						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg btn-responsive">Click on tile to download</a></p>
+					</div>
+				</div>
+
+				<div class="follow-us-container">
+					<div class="wow fadeInUp text-center" data-wow-duration="0.8s" data-wow-delay="1.5s">
+						<a class="fa fa-facebook social-icon" href="https://www.facebook.com/IIIT-Bangalore-152653471481338/" target="_blank"></a>
+						<a class="fa fa-google-plus social-icon" href="https://plus.google.com/+iiitbmedia/posts" target="_blank"></a>
+						<a class="fa fa-linkedin social-icon" href="https://www.linkedin.com/company/iiit-bangalore" target="_blank"></a>
+						<a class="fa fa fa-youtube-play social-icon" href="https://www.youtube.com/user/iiitbmedia" target="_blank"></a>
 					</div>
 				</div>
 			</div>
-
-			<div class="container follow-us-container">
-    		<div class="wow fadeInUp text-center" data-wow-duration="0.8s" data-wow-delay="1.5s">
-        	<a class="fa fa-facebook social-icon" href="https://www.facebook.com/IIIT-Bangalore-152653471481338/" target="_blank"></a>
-					<a class="fa fa-google-plus social-icon" href="https://plus.google.com/+iiitbmedia/posts" target="_blank"></a>
-					<a class="fa fa-linkedin social-icon" href="https://www.linkedin.com/company/iiit-bangalore" target="_blank"></a>
-        	<a class="fa fa fa-youtube-play social-icon" href="https://www.youtube.com/user/iiitbmedia" target="_blank"></a>
-    		</div>
-			</div>
-
+		</div>
+		<div class="fh5co-project-style-2" style="padding: 0px ! important;">
 			<div class="fh5co-projects">
 				<ul>
-					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a href="#howtoreach">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -113,7 +134,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a class="open-overlay" data-tag="induction" href="#required">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -128,7 +149,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a href="#hotels">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -143,7 +164,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a href="#placestovisit">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -158,7 +179,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a href="https://www.youtube.com/watch?v=1A94Q7B7nT4&index=6&list=PLe1PiiFnE7y_CIL-_3sWfCM0R0_5HZa8W" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -173,7 +194,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a class="open-overlay" data-tag="induction" href="#induction">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -188,7 +209,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a class="open-overlay" data-tag="faq" href="#faq">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -203,7 +224,7 @@
 							</div>
 						</a>
 					</li>
-					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s" data-stellar-background-ratio="0.5">
+					<li class="wow fadeInUp back2" data-wow-duration="0.8s" data-wow-delay="0.8s">
 						<a href="https://www.quora.com/topic/International-Institute-of-Information-Technology-Bangalore-IIIT-B" target="_blank">
 							<div class="fh5co-overlay"></div>
 							<div class="container">
@@ -241,7 +262,6 @@
 		</div>
 
 	<!-- END page-->
-	</div>
 
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
@@ -264,6 +284,9 @@
 	<!-- Stellar -->
 	<script src="js/jquery.stellar.min.js"></script>
 
+	<!-- superslides -->
+	<script src="js/jquery.superslides.js"></script>
+
 	<!-- countTo -->
 	<!-- <script src="js/jquery.countTo.js"></script> -->
 
@@ -271,6 +294,14 @@
 	<script src="js/wow.min.js"></script>
 
 	<script>
+		$('#slides').superslides({
+			play: 5000,
+			animation_speed: 2000,
+			animation:'fade',
+			nav: true,
+			pagination:true
+		});
+
 		new WOW().init();
 		var converter =  new showdown.Converter({
 	    'github_flavouring': true,
@@ -363,12 +394,5 @@
 
 	<!-- Main -->
 	<script src="js/main.js"></script>
-
-	<script src="http://archive.nicinabox.com/superslides/dist/jquery.superslides.js"></script>
-
-	 <script type="text/javascript">
-		$('#slides').superslides('start');
-	 </script>
-
 	</body>
 </html>
