--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 		$('#slides').superslides({
 			play: 5000,
 			animation_speed: 2000,
-			animation:'fade',
+			animation:'slide',
 			nav: true,
 			pagination:true
 		});
