--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
 	<body>
 		<div id="slides">
 		  <ul class="slides-container">
-		    <li><img src="images/slider/1.jpg" alt=""></li>
+		    <li><img src="images/slider/1.jpg" alt=""><div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div></li>
 		    <li><img src="images/slider/2.jpg" alt=""></li>
 		    <li><img src="images/slider/3.jpg" alt=""></li>
 		    <li><img src="images/slider/4.jpg" alt=""></li>
-				<li><img src="images/slider/5.jpg" alt=""></li>
-				<li><img src="images/slider/6.jpg" alt=""></li>
-				<li><img src="images/slider/7.jpg" alt=""></li>
-				<li><img src="images/slider/8.jpg" alt=""></li>
-				<li><img src="images/slider/9.jpg" alt=""></li>
-				<li><img src="images/slider/10.jpg" alt=""></li>
-				<li><img src="images/slider/11.jpg" alt=""></li>
-				<li><img src="images/slider/12.jpg" alt=""></li>
+		    <li><img src="images/slider/5.jpg" alt=""></li>
+		    <li><img src="images/slider/6.jpg" alt=""></li>
+		    <li><img src="images/slider/7.jpg" alt=""></li>
+		    <li><img src="images/slider/8.jpg" alt=""></li>
+		    <li><img src="images/slider/9.jpg" alt=""></li>
+		    <li><img src="images/slider/10.jpg" alt=""></li>
+		    <li><img src="images/slider/11.jpg" alt=""></li>
+		    <li><img src="images/slider/12.jpg" alt=""></li>
 		  </ul>
 			<nav class="slides-navigation">
       <a href="#" class="next">
