--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<body>
 		<div id="slides">
 		  <ul class="slides-container">
-		    <li><img src="images/slider/1.jpg" alt=""><div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div></li>
+		    <li><img src="images/slider/1.jpg" alt=""></li>
 		    <li><img src="images/slider/2.jpg" alt=""></li>
 		    <li><img src="images/slider/3.jpg" alt=""></li>
 		    <li><img src="images/slider/4.jpg" alt=""></li>
@@ -105,6 +105,8 @@
 						<p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="1.1s"><a class="btn btn-success btn-lg btn-responsive">Click on tile to download</a></p>
 					</div>
 				</div>
+				
+				<div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div>
 
 				<div class="follow-us-container">
 					<div class="wow fadeInUp text-center" data-wow-duration="0.8s" data-wow-delay="1.5s">
