--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 					</div>
 				</div>
 				
-				<div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div>
-
+				<center></center><div class="container"><div class="contrast"><p>All these photos are by the amazing senior <a href="https://www.facebook.com/bhargavshridhar?fref=ts">Bhargav Sridhar</a></p></div></div>
+				</center>
 				<div class="follow-us-container">
 					<div class="wow fadeInUp text-center" data-wow-duration="0.8s" data-wow-delay="1.5s">
 						<a class="fa fa-facebook social-icon" href="https://www.facebook.com/IIIT-Bangalore-152653471481338/" target="_blank"></a>
@@ -144,7 +144,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Required Documents</h3></div>
-											<div class="col-md-6"><p>Here's a checklist of all the documents you need !</p></div>
+											<div class="col-md-6"><p>Here's a checklist of all the documents you need while registration !</p></div>
 										</div>
 									</div>
 								</div>
@@ -204,7 +204,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Induction day schedule</h3></div>
-											<div class="col-md-6"><p>Your schedule for the first day @IIITB</p></div>
+											<div class="col-md-6"><p>Your schedule for the first few weeks @IIITB</p></div>
 										</div>
 									</div>
 								</div>
@@ -219,7 +219,7 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>FAQ's</h3></div>
-											<div class="col-md-6"><p>Check out the Frequently Asked Questions on the IIITB iMtech Admission Forum.</p></div>
+											<div class="col-md-6"><p>Check out the Frequently Asked Questions. Link to the iMTech Admission Forum 2016 <a href="https://www.facebook.com/groups/391580577698895/" target="_blank"></a></p></div>
 										</div>
 									</div>
 								</div>
@@ -234,7 +234,22 @@
 									<div class="fh5co-text-inner">
 										<div class="row">
 											<div class="col-md-6"><h3>Quora Q&A's</h3></div>
-											<div class="col-md-6"><p>Around 700 questions were asked by aspiring students and were answered by the students of IIITB over the years,... Don't forget to go through them ;)</p></div>
+											<div class="col-md-6"><p>More than 700 questions were asked on Quora, by aspiring students and were answered by the students of IIITB over the years,... Don't forget to go through them ;)</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</a>
+					</li>
+					<li class="wow fadeInUp back1" data-wow-duration="0.8s" data-wow-delay="0.8s">
+						<a class="open-overlay" data-tag="contributions" href="#contributions">
+							<div class="fh5co-overlay"></div>
+							<div class="container">
+								<div class="fh5co-text">
+									<div class="fh5co-text-inner">
+										<div class="row">
+											<div class="col-md-6"><h3>Contributions</h3></div>
+											<div class="col-md-6"><p>Last but never the least ;)</p></div>
 										</div>
 									</div>
 								</div>
@@ -262,6 +277,13 @@
 				</div>
 			</div>
 		</div>
+		
+		<div class="col-sm-12">
+                	<div class="copyright-text text-center">
+                    		<p>&copy; Zense 2016. All Rights Reserved.</p>
+                    		<p>Designed by<a href="http://zense.co.in/">Zense</a></p>
+                	</div>
+                </div>
 
 	<!-- END page-->
 
